WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 152866
Modern IDB: Various imported/w3c/indexeddb tests fail due to expecting the wrong exception
https://bugs.webkit.org/show_bug.cgi?id=152866
Summary
Modern IDB: Various imported/w3c/indexeddb tests fail due to expecting the wr...
Brady Eidson
Reported
2016-01-07 15:03:59 PST
Modern IDB: Various imported/w3c/indexeddb tests fail due to expecting the wrong exception
Attachments
Patch v1
(9.16 KB, patch)
2016-01-07 15:14 PST
,
Brady Eidson
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-01-07 15:12:13 PST
I've filed an issue in the W3C web apps test issue tracker:
https://github.com/w3c/web-platform-tests/issues/2455
In the meantime, we should violate the spec to match Legacy IDB (Safari 9), Chrome, and Edge.
Brady Eidson
Comment 2
2016-01-07 15:14:55 PST
Created
attachment 268499
[details]
Patch v1
Brady Eidson
Comment 3
2016-01-07 15:30:35 PST
https://trac.webkit.org/changeset/194733
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug