Modern IDB: Various imported/w3c/indexeddb tests fail due to expecting the wrong exception. https://bugs.webkit.org/show_bug.cgi?id=152866

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (5 skipped tests now pass).

* Modules/indexeddb/client/IDBObjectStoreImpl.cpp:
(WebCore::IDBClient::IDBObjectStore::putOrAdd): Reorder the exceptions, violating the spec but matching
  a vast majority of browsers.
(WebCore::IDBClient::IDBObjectStore::deleteFunction): Ditto.
(WebCore::IDBClient::IDBObjectStore::clear): Ditto.
(WebCore::IDBClient::IDBObjectStore::doCount): Ditto.

LayoutTests:

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/170951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194733 268f45cc-cd09-0410-ab3c-d52691b4dbfc